[package]
name = "mine_sweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = "0.12.1"
colored = "2.0.0"
rand = "0.8.5"
serde = "1.0.142"
board_plugin = { path = "board_plugin" }
